--- a/Gp/index.html
+++ b/Gp/index.html
@@ -195,7 +195,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Service</a></h4>
-              <p>Let us know how we did! Visist us at www.https://SamsLED'S.com/service/form</p>
+              <p>Let us know how we did! Visit us at www.https://SamsLED'S.com/service/form</p>
             </div>
           </div>
 
